lalr_logicparser/v16/y.output

state 0
	$accept: .top $end 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	top  goto 1
	fmla  goto 2
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 1
	$accept:  top.$end 

	$end  accept
	.  error


state 2
	top:  fmla.    (1)
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 1 (src line 63)


state 3
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	fmla:  term.    (35)
	fmla:  term.relop term 
	fmla:  term.TOK_TILDAEQ term 

	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_EQ  shift 29
	TOK_TILDAEQ  shift 28
	TOK_LE  shift 30
	TOK_LT  shift 31
	TOK_GE  shift 32
	TOK_GT  shift 33
	TOK_PTO  shift 34
	TOK_IF  shift 26
	.  reduce 35 (src line 201)

	relop  goto 27

state 4
	term:  TOK_LPAREN.term TOK_RPAREN 
	fmla:  TOK_LPAREN.fmla TOK_RPAREN 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 36
	term  goto 35
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 5
	fmla:  TOK_TRUE.    (39)

	.  reduce 39 (src line 217)


state 6
	fmla:  TOK_FALSE.    (40)

	.  reduce 40 (src line 219)


state 7
	fmla:  TOK_TILDA.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 37
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 8
	fmla:  TOK_FORALL.simplevars TOK_DOT fmla 

	TOK_VARIABLE  shift 40
	.  error

	simplevar  goto 39
	simplevars  goto 38

state 9
	fmla:  TOK_EXISTS.simplevars TOK_DOT fmla 

	TOK_VARIABLE  shift 40
	.  error

	simplevar  goto 39
	simplevars  goto 41

state 10
	fmla:  TOK_GLOBALLY.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 42
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 11
	fmla:  TOK_EVENTUALLY.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 43
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 12
	aterm:  aterm.TOK_LPAREN terms TOK_RPAREN 
	aterm:  aterm.TOK_DOT SYMBOLx 
	term:  aterm.    (20)

	TOK_LPAREN  shift 44
	TOK_DOT  shift 45
	.  reduce 20 (src line 169)


state 13
	term:  var.    (21)

	.  reduce 21 (src line 172)


state 14
	term:  TOK_OLD.aterm 

	TOK_PRESYMBOL  shift 17
	.  error

	aterm  goto 46
	SYMBOLx  goto 15

state 15
	aterm:  SYMBOLx.    (6)

	.  reduce 6 (src line 100)


state 16
	var:  TOK_VARIABLE.    (9)
	var:  TOK_VARIABLE.TOK_COLON atype 

	TOK_COLON  shift 47
	.  reduce 9 (src line 118)


state 17
	SYMBOLx:  TOK_PRESYMBOL.    (2)

	.  reduce 2 (src line 70)


state 18
	fmla:  fmla TOK_AND.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 48
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 19
	fmla:  fmla TOK_OR.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 49
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 20
	fmla:  fmla TOK_ARROW.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 50
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 21
	fmla:  fmla TOK_IFF.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 51
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 22
	term:  term TOK_PLUS.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 52
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 23
	term:  term TOK_MINUS.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 54
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 24
	term:  term TOK_TIMES.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 55
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 25
	term:  term TOK_DIV.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 56
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 26
	term:  term TOK_IF.fmla TOK_ELSE term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 57
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 27
	fmla:  term relop.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 58
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 28
	fmla:  term TOK_TILDAEQ.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 59
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 29
	relop:  TOK_EQ.    (29)

	.  reduce 29 (src line 190)


state 30
	relop:  TOK_LE.    (30)

	.  reduce 30 (src line 192)


state 31
	relop:  TOK_LT.    (31)

	.  reduce 31 (src line 193)


state 32
	relop:  TOK_GE.    (32)

	.  reduce 32 (src line 194)


state 33
	relop:  TOK_GT.    (33)

	.  reduce 33 (src line 195)


state 34
	relop:  TOK_PTO.    (34)

	.  reduce 34 (src line 196)


35: shift/reduce conflict (shift 60(0), red'n 35(0)) on TOK_RPAREN
state 35
	term:  TOK_LPAREN term.TOK_RPAREN 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	fmla:  term.    (35)
	fmla:  term.relop term 
	fmla:  term.TOK_TILDAEQ term 

	TOK_RPAREN  shift 60
	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_EQ  shift 29
	TOK_TILDAEQ  shift 28
	TOK_LE  shift 30
	TOK_LT  shift 31
	TOK_GE  shift 32
	TOK_GT  shift 33
	TOK_PTO  shift 34
	TOK_IF  shift 26
	.  reduce 35 (src line 201)

	relop  goto 27

state 36
	fmla:  TOK_LPAREN fmla.TOK_RPAREN 
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_RPAREN  shift 61
	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  error


37: shift/reduce conflict (shift 20(0), red'n 41(7)) on TOK_ARROW
37: shift/reduce conflict (shift 21(0), red'n 41(7)) on TOK_IFF
state 37
	fmla:  TOK_TILDA fmla.    (41)
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 41 (src line 221)


state 38
	simplevars:  simplevars.TOK_COMMA simplevar 
	fmla:  TOK_FORALL simplevars.TOK_DOT fmla 

	TOK_COMMA  shift 62
	TOK_DOT  shift 63
	.  error


state 39
	simplevars:  simplevar.    (15)

	.  reduce 15 (src line 151)


state 40
	simplevar:  TOK_VARIABLE.    (11)
	simplevar:  TOK_VARIABLE.TOK_COLON SYMBOLx 

	TOK_COLON  shift 64
	.  reduce 11 (src line 131)


state 41
	simplevars:  simplevars.TOK_COMMA simplevar 
	fmla:  TOK_EXISTS simplevars.TOK_DOT fmla 

	TOK_COMMA  shift 62
	TOK_DOT  shift 65
	.  error


42: shift/reduce conflict (shift 20(0), red'n 48(2)) on TOK_ARROW
42: shift/reduce conflict (shift 21(0), red'n 48(2)) on TOK_IFF
state 42
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  TOK_GLOBALLY fmla.    (48)

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 48 (src line 235)


43: shift/reduce conflict (shift 20(0), red'n 49(2)) on TOK_ARROW
43: shift/reduce conflict (shift 21(0), red'n 49(2)) on TOK_IFF
state 43
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  TOK_EVENTUALLY fmla.    (49)

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 49 (src line 237)


state 44
	aterm:  aterm TOK_LPAREN.terms TOK_RPAREN 
	terms: .    (17)

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  reduce 17 (src line 158)

	term  goto 67
	aterm  goto 12
	var  goto 13
	terms  goto 66
	SYMBOLx  goto 15

state 45
	aterm:  aterm TOK_DOT.SYMBOLx 

	TOK_PRESYMBOL  shift 17
	.  error

	SYMBOLx  goto 68

state 46
	aterm:  aterm.TOK_LPAREN terms TOK_RPAREN 
	aterm:  aterm.TOK_DOT SYMBOLx 
	term:  TOK_OLD aterm.    (22)

	TOK_LPAREN  shift 44
	TOK_DOT  shift 45
	.  reduce 22 (src line 174)


state 47
	var:  TOK_VARIABLE TOK_COLON.atype 

	TOK_PRESYMBOL  shift 17
	TOK_THIS  shift 71
	.  error

	atype  goto 69
	SYMBOLx  goto 70

48: shift/reduce conflict (shift 20(0), red'n 42(6)) on TOK_ARROW
48: shift/reduce conflict (shift 21(0), red'n 42(6)) on TOK_IFF
state 48
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla TOK_AND fmla.    (42)
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 42 (src line 223)


49: shift/reduce conflict (shift 20(0), red'n 43(5)) on TOK_ARROW
49: shift/reduce conflict (shift 21(0), red'n 43(5)) on TOK_IFF
state 49
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla TOK_OR fmla.    (43)
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_AND  shift 18
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 43 (src line 225)


50: shift/reduce conflict (shift 18(6), red'n 44(0)) on TOK_AND
50: shift/reduce conflict (shift 19(5), red'n 44(0)) on TOK_OR
50: shift/reduce conflict (shift 20(0), red'n 44(0)) on TOK_ARROW
50: shift/reduce conflict (shift 21(0), red'n 44(0)) on TOK_IFF
state 50
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla TOK_ARROW fmla.    (44)
	fmla:  fmla.TOK_IFF fmla 

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 44 (src line 227)


51: shift/reduce conflict (shift 18(6), red'n 45(0)) on TOK_AND
51: shift/reduce conflict (shift 19(5), red'n 45(0)) on TOK_OR
51: shift/reduce conflict (shift 20(0), red'n 45(0)) on TOK_ARROW
51: shift/reduce conflict (shift 21(0), red'n 45(0)) on TOK_IFF
state 51
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  fmla TOK_IFF fmla.    (45)

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 45 (src line 229)


state 52
	term:  term.TOK_PLUS term 
	term:  term TOK_PLUS term.    (24)
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 

	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	.  reduce 24 (src line 178)


state 53
	term:  TOK_LPAREN.term TOK_RPAREN 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 72
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 54
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term TOK_MINUS term.    (25)
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 

	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	.  reduce 25 (src line 180)


state 55
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term TOK_TIMES term.    (26)
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 

	TOK_DIV  shift 25
	.  reduce 26 (src line 182)


state 56
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term TOK_DIV term.    (27)
	term:  term.TOK_IF fmla TOK_ELSE term 

	.  reduce 27 (src line 184)


state 57
	term:  term TOK_IF fmla.TOK_ELSE term 
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	TOK_ELSE  shift 73
	.  error


state 58
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	fmla:  term relop term.    (36)

	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_IF  shift 26
	.  reduce 36 (src line 207)


state 59
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	fmla:  term TOK_TILDAEQ term.    (37)

	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_IF  shift 26
	.  reduce 37 (src line 211)


state 60
	term:  TOK_LPAREN term TOK_RPAREN.    (23)

	.  reduce 23 (src line 176)


state 61
	fmla:  TOK_LPAREN fmla TOK_RPAREN.    (38)

	.  reduce 38 (src line 215)


state 62
	simplevars:  simplevars TOK_COMMA.simplevar 

	TOK_VARIABLE  shift 40
	.  error

	simplevar  goto 74

state 63
	fmla:  TOK_FORALL simplevars TOK_DOT.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 75
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 64
	simplevar:  TOK_VARIABLE TOK_COLON.SYMBOLx 

	TOK_PRESYMBOL  shift 17
	.  error

	SYMBOLx  goto 76

state 65
	fmla:  TOK_EXISTS simplevars TOK_DOT.fmla 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 4
	TOK_TILDA  shift 7
	TOK_FORALL  shift 8
	TOK_EXISTS  shift 9
	TOK_TRUE  shift 5
	TOK_FALSE  shift 6
	TOK_OLD  shift 14
	TOK_GLOBALLY  shift 10
	TOK_EVENTUALLY  shift 11
	.  error

	fmla  goto 77
	term  goto 3
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 66
	aterm:  aterm TOK_LPAREN terms.TOK_RPAREN 
	terms:  terms.TOK_COMMA term 

	TOK_RPAREN  shift 78
	TOK_COMMA  shift 79
	.  error


state 67
	terms:  term.    (18)
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 

	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_IF  shift 26
	.  reduce 18 (src line 161)


state 68
	aterm:  aterm TOK_DOT SYMBOLx.    (8)

	.  reduce 8 (src line 111)


state 69
	atype:  atype.TOK_DOT SYMBOLx 
	var:  TOK_VARIABLE TOK_COLON atype.    (10)

	TOK_DOT  shift 80
	.  reduce 10 (src line 123)


state 70
	atype:  SYMBOLx.    (3)

	.  reduce 3 (src line 77)


state 71
	atype:  TOK_THIS.    (5)

	.  reduce 5 (src line 92)


state 72
	term:  TOK_LPAREN term.TOK_RPAREN 
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 

	TOK_RPAREN  shift 60
	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_IF  shift 26
	.  error


state 73
	term:  term TOK_IF fmla TOK_ELSE.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 81
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 74
	simplevars:  simplevars TOK_COMMA simplevar.    (16)

	.  reduce 16 (src line 154)


75: shift/reduce conflict (shift 18(6), red'n 46(0)) on TOK_AND
75: shift/reduce conflict (shift 19(5), red'n 46(0)) on TOK_OR
75: shift/reduce conflict (shift 20(0), red'n 46(0)) on TOK_ARROW
75: shift/reduce conflict (shift 21(0), red'n 46(0)) on TOK_IFF
state 75
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  TOK_FORALL simplevars TOK_DOT fmla.    (46)

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 46 (src line 231)


state 76
	simplevar:  TOK_VARIABLE TOK_COLON SYMBOLx.    (12)

	.  reduce 12 (src line 136)


77: shift/reduce conflict (shift 18(6), red'n 47(0)) on TOK_AND
77: shift/reduce conflict (shift 19(5), red'n 47(0)) on TOK_OR
77: shift/reduce conflict (shift 20(0), red'n 47(0)) on TOK_ARROW
77: shift/reduce conflict (shift 21(0), red'n 47(0)) on TOK_IFF
state 77
	fmla:  fmla.TOK_AND fmla 
	fmla:  fmla.TOK_OR fmla 
	fmla:  fmla.TOK_ARROW fmla 
	fmla:  fmla.TOK_IFF fmla 
	fmla:  TOK_EXISTS simplevars TOK_DOT fmla.    (47)

	TOK_AND  shift 18
	TOK_OR  shift 19
	TOK_ARROW  shift 20
	TOK_IFF  shift 21
	.  reduce 47 (src line 233)


state 78
	aterm:  aterm TOK_LPAREN terms TOK_RPAREN.    (7)

	.  reduce 7 (src line 105)


state 79
	terms:  terms TOK_COMMA.term 

	TOK_VARIABLE  shift 16
	TOK_PRESYMBOL  shift 17
	TOK_LPAREN  shift 53
	TOK_OLD  shift 14
	.  error

	term  goto 82
	aterm  goto 12
	var  goto 13
	SYMBOLx  goto 15

state 80
	atype:  atype TOK_DOT.SYMBOLx 

	TOK_PRESYMBOL  shift 17
	.  error

	SYMBOLx  goto 83

state 81
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 
	term:  term TOK_IF fmla TOK_ELSE term.    (28)

	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	.  reduce 28 (src line 186)


state 82
	terms:  terms TOK_COMMA term.    (19)
	term:  term.TOK_PLUS term 
	term:  term.TOK_MINUS term 
	term:  term.TOK_TIMES term 
	term:  term.TOK_DIV term 
	term:  term.TOK_IF fmla TOK_ELSE term 

	TOK_PLUS  shift 22
	TOK_MINUS  shift 23
	TOK_TIMES  shift 24
	TOK_DIV  shift 25
	TOK_IF  shift 26
	.  reduce 19 (src line 163)


state 83
	atype:  atype TOK_DOT SYMBOLx.    (4)

	.  reduce 4 (src line 82)

Rule not reduced: vars:  var 
Rule not reduced: vars:  vars TOK_COMMA var 

48 terminals, 13 nonterminals
50 grammar rules, 84/16000 states
27 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 136/240000
66 extra closures
300 shift entries, 1 exceptions
41 goto entries
75 entries saved by goto default
Optimizer space used: output 137/240000
137 table entries, 2 zero
maximum spread: 44, maximum offset: 80
